--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,3 +1,3 @@
-<p>
-  body works!
-</p>
+<ul class="list-group">Messaggi
+  <li class="list-group-item list-group-item-action" *ngFor="let message of messages">{{message}}</li>
+</ul>
