--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,8 @@
     <h1 class="text-center">{{modello.nome}}</h1>
     <h3>Post: <span class="badge badge-primary badge-pill">{{modello.numeroPost}}</span> 
       Commenti a Post: <span class="badge badge-primary badge-pill">{{modello.numeroCommenti}}</span> 
-      Album pubblicati: <span class="badge badge-primary badge-pill">{{modello.numeroAlbum}}</span> </h3>
+      Album pubblicati: <span class="badge badge-primary badge-pill">{{modello.numeroAlbum}}</span>
+      foto pubblicate: <span class="badge badge-primary badge-pill">{{modello.numeroFoto}}</span> </h3>
     <p>attualmente sono: {{modello.veroFalso}}</p>
     <button class="btn btn-primary center-block m-2" (click)="modificaBoolean()">toogle lista</button>
     <ul class="list-group " *ngIf="modello.veroFalso">
