risolto errore post

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -9,6 +9,7 @@
     <div class="form-group">
       <label for="corpoPost">Corpo Post</label>
       <textarea class="form-control" [(ngModel)]="post.body" name="body" id="corpoPost" rows="3"></textarea>
+      <label >{{error}}</label>
     </div>
   </form>
 </div>
