--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="cont">
   <h1>{{user.name}}</h1>
-  <form action="">
+  <form class="form-horizontal">
     <div class="form-group">
       <label for="title">Titolo</label>
       <input type="text" [(ngModel)]="post.title" name="title" class="form-control" id="title" aria-describedby="emailHelp" placeholder="Inserisci titolo">
