--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -3,6 +3,7 @@
 </ul>
 <!-- <button routerLink="/post/{{model.id}}"> scrivi post</button> -->
 <button (click)="visualizzaPost()"> scrivi post</button>
+<button (click)="addLocalStorage()"> scrivi localStorage</button>
 <app-modal-post modalId="MiaModale"
     modalHeader="Invia Form"
     (confirm)="faiQualcosa()">
