--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -2,11 +2,12 @@
   <li class="list-group-item list-group-item-action" *ngFor="let message of messages">{{message}}</li>
 </ul>
 <!-- <button routerLink="/post/{{model.id}}"> scrivi post</button> -->
-<button (click)="visualizzaPost()"> scrivi post</button>
-<button (click)="addLocalStorage()"> scrivi localStorage</button>
+<button (click)="visualizzaPost()">scrivi post</button>
+<button (click)="addLocalStorage()">scrivi localStorage</button>
+<button routerLink="/play">gioca</button>
 <app-modal-post modalId="MiaModale"
     modalHeader="Invia Form"
     (confirm)="faiQualcosa()">
   <app-post [id]="model.id"></app-post>
 </app-modal-post>
-<app-geolocation></app-geolocation>
+<!-- <app-geolocation></app-geolocation> -->
