--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -1,5 +1,16 @@
 canvas{
-    width: 70%;
-    height: 70%;
+    width: 100%;
+    height: 100%;
     border: 2px solid black;
+}
+.contButton{
+    margin: 10px;
+}
+.cont{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+.navButton{
+    margin: 10px;
 }
